#头文件目录
INCLUDE_DIRECTORIES(./include ./test/include ${JSON_INCLUDE} ${PUB_INCLUDE} ${POCO_INCLUDE} ${TCFS_INCLUDE})

#代码列表
FILE(GLOB SRC_FILES ./source/*.cpp ./test/source/*.cpp)
#依赖的LIB
SET(OAM_ROUTER_LIBS ${LIB_SYSCOMM} ${POCO_LIBS} ${TINYXML_LIBS} ${LIB_JSON} ${LIB_TCFS})

ADD_DEFINITIONS(
	-DLOG_INCLUDE_FILE
)

#执行文件
ADD_EXECUTABLE(oamroutersrv ${SRC_FILES})
#连接相关库
TARGET_LINK_LIBRARIES(oamroutersrv ${OAM_ROUTER_LIBS})

IF(LCOV_ENABLED MATCHES yes)
    ADD_DEFINITIONS(${G_COVERAGE})
	TARGET_LINK_LIBRARIES(oamroutersrv gcov)
ENDIF(LCOV_ENABLED MATCHES yes)

IF(FOR_UNIT_TEST MATCHES yes)
    SUBDIRS(./test)
ENDIF(FOR_UNIT_TEST MATCHES yes)
